# starterCXX

./: .travis.yml  CMakeLists.txt  README.md
inc/: myclass.h
src/: myclass.cc
test/: tests-myclass.cc
